<resources>
    <string name="app_name">Monitoring Cryptocurrency</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_data_success">Data added successfully</string>
    <string name="add_data_yes">Yes</string>
    <string name="add_data_no">No</string>

    <!-- Menus -->
    <string name="all_title_menu">Market</string>
    <string name="favorite_title_menu">Favorite</string>
    <string name="news_title_menu">News</string>
    <string name="share_menu">Share</string>

    <!-- News -->
    <string name="news_default_title">Weekly Recap Ending July 1st</string>
    <string name="news_default_author">Mira Christanto</string>
    <string name="news_default_read_more">Read more</string>

    <!-- Profile -->
    <string name="profile_default_name">Bitcoin</string>
    <string name="profile_default_overview">Default overview</string>
    <string name="profile_dafault_history">Default history</string>
    <string name="metrics_period_1h">1H</string>
    <string name="metrics_period_1d">1D</string>
    <string name="metrics_period_1m">1M</string>
    <string name="metrics_period_1y">1Y</string>
    <string name="metrics_period_all">ALL</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="favorites_menu">Favorites</string>

</resources>