<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/less_black"
    tools:context=".screens.metrics.MetricsFragment">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_margin="6dp"
        android:id="@+id/metrics_periods"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart">

        <TextView
            android:id="@+id/metrics_period_1h"
            style="@style/item_metrics_period"
            android:text="@string/metrics_period_1h" />

        <TextView
            android:id="@+id/metrics_period_1d"
            style="@style/item_metrics_period"
            android:text="@string/metrics_period_1d" />

        <TextView
            android:id="@+id/metrics_period_1m"
            style="@style/item_metrics_period"
            android:text="@string/metrics_period_1m"
            android:background="@drawable/background_metrics_period_selected"/>

        <TextView
            android:id="@+id/metrics_period_1y"
            style="@style/item_metrics_period"
            android:text="@string/metrics_period_1y" />

        <TextView
            android:id="@+id/metrics_period_all"
            style="@style/item_metrics_period"
            android:text="@string/metrics_period_all" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metrics_periods">

        <TextView
            android:id="@+id/metrics_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="Bitcoin(BTC)"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/metrics_title"
            app:layout_constraintTop_toBottomOf="@id/metrics_title">

            <TextView
                android:id="@+id/metrics_title_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PRICE"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/metrics_title_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="USD:"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/metrics_title_price" />

            <TextView
                android:id="@+id/metrics_current_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="$34,374"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/metrics_title_usd" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/constraintPrice"
            app:layout_constraintStart_toStartOf="@id/constraintPrice"
            app:layout_constraintTop_toBottomOf="@id/constraintPrice">

            <TextView
                android:id="@+id/metrics_title_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CHANGE"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/metrics_title_1h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1H:"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/metrics_title_change" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="+0.43"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/metrics_title_1h" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>