<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Name -->
        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_default_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Overview -->
        <TextView
            android:id="@+id/profile_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_default_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_name" />

        <!-- History -->
        <LinearLayout
            android:id="@+id/profile_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_items_profile"
            android:orientation="vertical"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_overview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="History" />

            <TextView
                android:id="@+id/profile_history_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_dafault_history"
                android:visibility="gone" />
        </LinearLayout>

        <!-- Organization -->
        <LinearLayout
            android:id="@+id/profile_organizations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_items_profile"
            android:orientation="vertical"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_history">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Organizations" />

            <LinearLayout
                android:id="@+id/profile_organizations_name_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name: " />

                <TextView
                    android:id="@+id/profile_organizations_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hypothetical Bitcoin Foundation" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_organizations_jurisdiction_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jurisdiction: " />

                <TextView
                    android:id="@+id/profile_organizations_jurisdiction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Switzerland, Europe" />
            </LinearLayout>
        </LinearLayout>

        <!-- People -->
        <LinearLayout
            android:id="@+id/profile_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_items_profile"
            android:orientation="vertical"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_organizations">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="People" />


            <ListView
                android:id="@+id/profile_people_contributors_listview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>